--- a/src/i18n/messages/hi.json
+++ b/src/i18n/messages/hi.json
@@ -297,6 +297,86 @@
         "keywords": "JSON से YAML, YAML कनवर्टर, कॉन्फ़िग कनवर्टर"
       }
     },
+    "json-to-toml": {
+      "name": "JSON से TOML",
+      "description": "JSON डेटा को TOML कॉन्फ़िगरेशन प्रारूप में परिवर्तित करें",
+      "placeholder": "कृपया JSON डेटा दर्ज करें...",
+      "invalid_json": "अमान्य JSON प्रारूप",
+      "input_title": "JSON इनपुट",
+      "input_desc": "परिवर्तित करने के लिए JSON डेटा दर्ज करें",
+      "output_title": "TOML आउटपुट",
+      "output_desc": "परिवर्तित TOML कॉन्फ़िगरेशन",
+      "output_placeholder": "परिवर्तित TOML यहां प्रदर्शित होगा...",
+      "introduction": "JSON से TOML कनवर्टर एक पेशेवर कॉन्फ़िगरेशन फाइल प्रारूप रूपांतरण उपकरण है जो JSON डेटा को TOML कॉन्फ़िगरेशन प्रारूप में तेज़ी से परिवर्तित करता है। TOML एक पढ़ने में आसान कॉन्फ़िगरेशन फाइल प्रारूप है जो Rust परियोजनाओं, Python कॉन्फ़िगरेशन, Go एप्लिकेशन आदि में व्यापक रूप से उपयोग किया जाता है। जटिल नेस्टेड संरचनाओं का समर्थन करता है, स्वचालित रूप से डेटा प्रकारों को संभालता है और मानक TOML प्रारूप आउटपुट उत्पन्न करता है।",
+      "features": [
+        "🔄 JSON को TOML कॉन्फ़िगरेशन फॉर्मेट में वन-क्लिक कन्वर्शन",
+        "📝 स्वचालित रूप से पठनीय TOML फॉर्मेट उत्पन्न करता है",
+        "🎯 जटिल नेस्टेड ऑब्जेक्ट्स और एरेज़ का समर्थन",
+        "📋 डेटा टाइप और संरचना की अखंडता बनाए रखता है",
+        "💾 परिवर्तित TOML फाइलों का त्वरित डाउनलोड",
+        "⚡ तत्काल पूर्वावलोकन के साथ रियल-टाइम रूपांतरण",
+        "🎨 लाइट/डार्क थीम समर्थन",
+        "🔒 स्थानीय प्रसंस्करण डेटा सुरक्षा सुनिश्चित करता है"
+      ],
+      "faq": [
+        {
+          "question": "JSON से TOML रूपांतरण किन परिदृश्यों के लिए उपयुक्त है?",
+          "answer": "मुख्य रूप से Rust परियोजना कॉन्फ़िगरेशन (Cargo.toml), Python परियोजना कॉन्फ़िगरेशन (pyproject.toml), Hugo स्थैतिक वेबसाइट्स, कॉन्फ़िगरेशन फाइल प्रबंधन आदि के लिए उपयुक्त है। TOML फॉर्मेट अधिक संक्षिप्त और सहज है, विशेष रूप से कॉन्फ़िगरेशन फाइलों को मैन्युअल रूप से संपादित करने और बनाए रखने के लिए उपयुक्त है।"
+        },
+        {
+          "question": "क्या रूपांतरण के दौरान डेटा प्रकार खो जाएंगे?",
+          "answer": "नहीं। हमारा कनवर्टर डेटा प्रकार की अखंडता को सख्ती से बनाए रखता है, जिसमें स्ट्रिंग्स, संख्याएँ, बूलीयन, डेटटाइम, एरेज़, टेबल्स जैसे सभी TOML-समर्थित डेटा प्रकार शामिल हैं, जो सभी सटीक रूप से मैप किए गए हैं।"
+        },
+        {
+          "question": "क्या उत्पन्न TOML फाइलें मानक प्रारूप के अनुरूप हैं?",
+          "answer": "हाँ, उत्पन्न TOML फाइलें पूरी तरह से TOML v1.0.0 मानक विनिर्देशों के अनुरूप हैं और किसी भी मानक TOML पार्सर द्वारा सही ढंग से पढ़ी जा सकती हैं, जिनमें Rust का toml crate, Python की toml लाइब्रेरी आदि शामिल हैं।"
+        }
+      ],
+      "meta": {
+        "title": "JSON से TOML कनवर्टर - कॉन्फ़िग फाइल फॉर्मेट कन्वर्शन",
+        "description": "कॉन्फ़िग फाइलों के लिए ऑनलाइन JSON से TOML कनवर्टर। Rust, Python और अन्य परियोजना कॉन्फ़िगरेशन के लिए फॉर्मेट रूपांतरण का समर्थन करता है। वन-क्लिक TOML फाइलें डाउनलोड करें।",
+        "keywords": "JSON से TOML, TOML कनवर्टर, कॉन्फ़िग कन्वर्टर"
+      }
+    },
+    "toml-to-json": {
+      "name": "TOML से JSON",
+      "description": "TOML कॉन्फ़िगरेशन को JSON प्रारूप डेटा में परिवर्तित करें",
+      "placeholder": "कृपया TOML डेटा दर्ज करें...",
+      "invalid_toml": "अमान्य TOML प्रारूप",
+      "input_title": "TOML इनपुट",
+      "input_desc": "परिवर्तित करने के लिए TOML कॉन्फ़िगरेशन दर्ज करें",
+      "output_title": "JSON आउटपुट",
+      "output_desc": "परिवर्तित JSON डेटा",
+      "output_placeholder": "परिवर्तित JSON यहां प्रदर्शित होगा...",
+      "introduction": "TOML से JSON कनवर्टर एक पेशेवर कॉन्फ़िगरेशन फाइल प्रारूप रूपांतरण उपकरण है जो TOML कॉन्फ़िगरेशन को JSON प्रारूप में तेज़ी से परिवर्तित करता है। Cargo.toml, pyproject.toml और अन्य कॉन्फ़िगरेशन फाइलों को पढ़ने का समर्थन करता है, उन्हें मानक JSON प्रारूप में परिवर्तित करता है जिससे प्रोग्राम प्रोसेसिंग आसान हो जाती है। डेटा संरचना की अखंडता बनाए रखता है और स्वचालित रूप से TOML-विशिष्ट डेटटाइम प्रकारों को संभालता है।",
+      "features": [
+        "🔄 TOML कॉन्फ़िगरेशन को मानक JSON फॉर्मेट में वन-क्लिक कन्वर्शन",
+        "🎯 बहु-स्तरीय नेस्टेड टेबल और एरे स्ट्रक्चर्स का समर्थन",
+        "📅 स्वचालित रूप से TOML डेटटाइम प्रकारों को संभालता है",
+        "💾 परिणाम डाउनलोड का समर्थन, सहेजने और साझा करने में सुविधाजनक",
+        "⚡ रियल-टाइम ब्राउज़र-लोकल रूपांतरण, फाइल अपलोड की आवश्यकता नहीं",
+        "🔒 कोई डेटा अपलोड नहीं, कॉन्फ़िगरेशन फाइल सुरक्षा की रक्षा करता है"
+      ],
+      "faq": [
+        {
+          "question": "TOML से JSON रूपांतरण आमतौर पर किन परिदृश्यों में उपयोग किया जाता है?",
+          "answer": "सामान्य परिदृश्यों में शामिल हैं: Rust परियोजना Cargo.toml, Python परियोजना pyproject.toml और अन्य कॉन्फ़िगरेशन फाइलों को पढ़ना और प्रोग्राम उपयोग के लिए JSON में परिवर्तित करना; कॉन्फ़िगरेशन प्रबंधन उपकरणों के TOML प्रारूप को API-स्वीकार्य JSON प्रारूप में परिवर्तित करना; विभिन्न सिस्टमों के बीच कॉन्फ़िगरेशन प्रारूप रूपांतरण आदि।"
+        },
+        {
+          "question": "क्या परिवर्तित JSON मूल कॉन्फ़िगरेशन का अर्थ बदल देगा?",
+          "answer": "नहीं। टूल TOML में पदानुक्रमित संबंधों और डेटा प्रकारों को संरक्षित करता है, केवल प्रतिनिधित्व प्रारूप बदलता है। ध्यान दें कि TOML डेटटाइम प्रकारों को JSON संगतता बनाए रखने के लिए ISO 8601 स्ट्रिंग प्रारूप में परिवर्तित किया जाएगा।"
+        },
+        {
+          "question": "क्या टूल अपेक्षाकृत बड़े TOML फाइलों का समर्थन करता है?",
+          "answer": "हाँ, आमतौर पर सैकड़ों KB से कुछ MB तक की TOML फाइलों को सामान्य रूप से परिवर्तित किया जा सकता है। ब्राउज़र प्रदर्शन सीमाओं के कारण, अत्यधिक बड़ी फाइलों में थोड़ी देरी हो सकती है, इसलिए उपयुक्त होने पर रूपांतरण से पहले उन्हें विभाजित करने की सिफारिश की जाती है।"
+        }
+      ],
+      "meta": {
+        "title": "TOML से JSON कनवर्टर - कॉन्फ़िग फाइल फॉर्मेट कन्वर्शन",
+        "description": "ऑनलाइन TOML से JSON कनवर्टर। Cargo.toml, pyproject.toml और अन्य कॉन्फ़िग फाइल फॉर्मेट रूपांतरण का समर्थन करता है। वन-क्लिक कॉपी या डाउनलोड परिणाम।",
+        "keywords": "TOML से JSON, कॉन्फ़िग कन्वर्टर, TOML कनवर्टर"
+      }
+    },
     "yaml-to-json": {
       "name": "YAML से JSON",
       "description": "YAML कॉन्फ़िगरेशन को JSON डेटा में परिवर्तित करें",
